--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>HTML | Ödev 1</title>
 </head>
 <body>
-    
+    <!-- Burada Ad Soyad başlık olacak şekilde yazılacaktır-->
+    <h1>Emre Peşmen</h1>
 </body>
 </html>
