--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>HTML | Ödev 1</title>
 </head>
 <body>
-    <!-- Burada Ad Soyad başlık olacak şekilde yazılacaktır-->
+    <!-- Burada Ad Soyad başlık olacak şekilde yazılmıştır-->
     <h1>Emre Peşmen</h1>
+
+    <!-- Burada Hakkımda alt başlık olacak şekilde yazılmıştır-->
+    <h2>Hakkımda</h2>
+    <p>Ben Emre Peşmen. Yönetim Bilişim Sistemleri bölümü 3.sınıf  öğrencisiyim. Full Stack Developer olma hedefim var bunu gerçekleştirebilmek için ilk olarak Front-End alanında Patika.dev vesilesiyle aldığım eğitimlerle kendimi geliştirmek istiyorum. Sonrasında da Back-End alanında alacağım eğitimlerle yapacağım projelerle hedefime ulaşmak istiyorum. Spor yapmayı, kitap okumayı, film veya dizi izlemeyi seviyorum.</p>
 </body>
 </html>
