my favorite tv series added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <h1>Emre Peşmen</h1>
 
     <!-- Burada Hakkımda alt başlık olacak şekilde yazılmıştır-->
-    <h2>Hakkımda</h2>
+    <h3>Hakkımda</h3>
     <p>Ben Emre Peşmen. Yönetim Bilişim Sistemleri bölümü 3.sınıf  öğrencisiyim. Full Stack Developer olma hedefim var bunu gerçekleştirebilmek için ilk olarak Front-End alanında Patika.dev vesilesiyle aldığım eğitimlerle kendimi geliştirmek istiyorum. Sonrasında da Back-End alanında alacağım eğitimlerle yapacağım projelerle hedefime ulaşmak istiyorum. Spor yapmayı, kitap okumayı, film veya dizi izlemeyi seviyorum.</p>
+
+    <!--Burada Sevdiğim Diziler alt başlık olacak şekilde yazılmıştır-->
+    <h2>Sevdiğim Diziler</h2>
+    <h3>Prison Break</h3>
+    <p>Haksız yere suçlandığını düşündüğü abisini hapishaneden kurtarmak isteyen Michael Scofield, nerdeyse kusursuz bir plan yapar.Lincoln Burrows'a yüklenen suç, kendilerini temize çıkarabilecekleri bir suç değildir. Devletin de işin içine karıştığını öğrendiklerinde kaçmaktan başka çareleri kalmaz. Michael planını uygulamaya sokar ve kaçış başlar.</p>
+    <h3>Breaking Bad</h3>
+    <p>Breaking Bad, Vince Gilligan tarafından yaratılan ve AMC'de yayımlanan bir Amerikan suç drama dizisidir. Çekimleri, hikâyenin de geçtiği Albuquerque, New Mexico'da yapılan dizi, ellinci yaş gününü kutladıktan sonra üçüncü evre akciğer kanseri olduğunu öğrenen kimya öğretmeni Walter White'ın (Bryan Cranston) uyuşturucu baronuna dönüşme sürecini konu almaktadır. Walter, ölmeden önce ailesini güvence altına almaya yetecek kadar para bırakmak için eski öğrencisi Jesse Pinkman (Aaron Paul) ile metamfetamin üretmeye başlar ve suç dünyasına adımını atar.</p>
 </body>
 </html>
